; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_handle_unknown_extension.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_handle_unknown_extension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 (i32*, %struct.TYPE_7__*, i64)* }
%struct.TYPE_6__ = type { i64, i32 }

@UINT16_MAX = common dso_local global i64 0, align 8
@MAX_UNKNOWN_EXTENSIONS = common dso_local global i64 0, align 8
@PTLS_ALERT_ILLEGAL_PARAMETER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_7__*, i64, i32*, i32*, %struct.TYPE_6__*)* @handle_unknown_extension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_unknown_extension(i32* %0, %struct.TYPE_7__* %1, i64 %2, i32* %3, i32* %4, %struct.TYPE_6__* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_6__*, align 8
  %14 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store %struct.TYPE_6__* %5, %struct.TYPE_6__** %13, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %16 = icmp ne %struct.TYPE_7__* %15, null
  br i1 %16, label %17, label %89

17:                                               ; preds = %6
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i64 (i32*, %struct.TYPE_7__*, i64)*, i64 (i32*, %struct.TYPE_7__*, i64)** %19, align 8
  %21 = icmp ne i64 (i32*, %struct.TYPE_7__*, i64)* %20, null
  br i1 %21, label %22, label %89

22:                                               ; preds = %17
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = load i64 (i32*, %struct.TYPE_7__*, i64)*, i64 (i32*, %struct.TYPE_7__*, i64)** %24, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %28 = load i64, i64* %10, align 8
  %29 = call i64 %25(i32* %26, %struct.TYPE_7__* %27, i64 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %89

31:                                               ; preds = %22
  store i64 0, i64* %14, align 8
  br label %32

32:                                               ; preds = %56, %31
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %34 = load i64, i64* %14, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @UINT16_MAX, align 8
  %39 = icmp ne i64 %37, %38
  br i1 %39, label %40, label %59

40:                                               ; preds = %32
  %41 = load i64, i64* %14, align 8
  %42 = load i64, i64* @MAX_UNKNOWN_EXTENSIONS, align 8
  %43 = icmp ult i64 %41, %42
  %44 = zext i1 %43 to i32
  %45 = call i32 @assert(i32 %44)
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %47 = load i64, i64* %14, align 8
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i64 %47
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = load i64, i64* %10, align 8
  %52 = icmp eq i64 %50, %51
  br i1 %52, label %53, label %55

53:                                               ; preds = %40
  %54 = load i32, i32* @PTLS_ALERT_ILLEGAL_PARAMETER, align 4
  store i32 %54, i32* %7, align 4
  br label %90

55:                                               ; preds = %40
  br label %56

56:                                               ; preds = %55
  %57 = load i64, i64* %14, align 8
  %58 = add i64 %57, 1
  store i64 %58, i64* %14, align 8
  br label %32

59:                                               ; preds = %32
  %60 = load i64, i64* %14, align 8
  %61 = load i64, i64* @MAX_UNKNOWN_EXTENSIONS, align 8
  %62 = icmp ult i64 %60, %61
  br i1 %62, label %63, label %88

63:                                               ; preds = %59
  %64 = load i64, i64* %10, align 8
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %66 = load i64, i64* %14, align 8
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i64 %66
  %68 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %67, i32 0, i32 0
  store i64 %64, i64* %68, align 8
  %69 = load i32*, i32** %11, align 8
  %70 = load i32*, i32** %12, align 8
  %71 = load i32*, i32** %11, align 8
  %72 = ptrtoint i32* %70 to i64
  %73 = ptrtoint i32* %71 to i64
  %74 = sub i64 %72, %73
  %75 = sdiv exact i64 %74, 4
  %76 = trunc i64 %75 to i32
  %77 = call i32 @ptls_iovec_init(i32* %69, i32 %76)
  %78 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %79 = load i64, i64* %14, align 8
  %80 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %78, i64 %79
  %81 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %80, i32 0, i32 1
  store i32 %77, i32* %81, align 8
  %82 = load i64, i64* @UINT16_MAX, align 8
  %83 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %84 = load i64, i64* %14, align 8
  %85 = add i64 %84, 1
  %86 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %83, i64 %85
  %87 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %86, i32 0, i32 0
  store i64 %82, i64* %87, align 8
  br label %88

88:                                               ; preds = %63, %59
  br label %89

89:                                               ; preds = %88, %22, %17, %6
  store i32 0, i32* %7, align 4
  br label %90

90:                                               ; preds = %89, %53
  %91 = load i32, i32* %7, align 4
  ret i32 %91
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @ptls_iovec_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
